# intro_allegro_gr2

./: .gitignore  CMakeLists.txt  README.md
Hello_allegro/: main_hello.c
TP0/: main_0.c
TP1/: main_1.c
TP2/: groupe2.c
